// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CardItem /> Matches the Card Item Default snapshot 1`] = `
<article
  className="cardItem undefined"
  typeof="sioc:Item foaf:Document"
>
  <div
    className="titleWrap undefined"
  >
    <h2
      className="title"
    >
      <a
        className="link"
        href="/"
      >
        Test Title
      </a>
    </h2>
    <span
      content="Test Title"
      property="dc:title"
    />
    <span
      content="0"
      datatype="xsd:integer"
      property="sioc:num_replies"
    />
  </div>
  <figure
    className="image undefined"
  >
    <a
      href="/"
    >
      <img
        alt={null}
        className="img undefined"
        src={null}
        typeof="foaf:Image"
      />
    </a>
  </figure>
  <p
    className="blurb undefined"
  />
</article>
`;

exports[`<CardItem /> Matches the Card Item Large snapshot 1`] = `
<article
  className="cardItem cardItemLg"
  typeof="sioc:Item foaf:Document"
>
  <div
    className="titleWrap titleWrapLg"
  >
    <h2
      className="undefined"
    >
      <a
        className="link"
        href="/"
      >
        Test Title
      </a>
    </h2>
    <span
      content="Test Title"
      property="dc:title"
    />
    <span
      content="0"
      datatype="xsd:integer"
      property="sioc:num_replies"
    />
  </div>
  <figure
    className="image imageLg"
  >
    <a
      href="/"
    >
      <img
        alt={null}
        className="img imgLg"
        src={null}
        typeof="foaf:Image"
      />
    </a>
  </figure>
  <p
    className="blurb blurbLg"
  />
</article>
`;
